--- a/View/SymptByPatient_Form.html
+++ b/View/SymptByPatient_Form.html
@@ -1,346 +1,97 @@
+<!DOCTYPE html>
 <html>
-
 <head>
-{php}html_header_show();{/php}
+<?php html_header_show();
+var_dump($this->form_folder);
+?>
 
-{literal}
+<!-- supporting javascript code -->
+<script type="text/javascript" src="<?php echo $GLOBALS['webroot'] ?>/library/js/jquery.js"></script>
+<script type="text/javascript" src="<?php echo $GLOBALS['webroot'] ?>/library/textformat.js"></script>
 
- <style type="text/css" title="mystyles" media="all">
+<!-- page styles -->
+<link rel="stylesheet" href="<?php echo $css_header;?>" type="text/css">
+<link rel="stylesheet" href="../../forms/<?php echo $this->form_folder; ?>/style.css" type="text/css">
 
-<!--
+<!-- pop up calendar -->
+<style type="text/css">@import url(<?php echo $GLOBALS['webroot'] ?>/library/dynarch_calendar.css);</style>
+<script type="text/javascript" src="<?php echo $GLOBALS['webroot'] ?>/library/dynarch_calendar.js"></script>
+<script type="text/javascript" src="<?php echo $GLOBALS['webroot'] ?>/library/dynarch_calendar_en.js"></script>
+<script type="text/javascript" src="<?php echo $GLOBALS['webroot'] ?>/library/dynarch_calendar_setup.js"></script>
 
-td {
+<script language="JavaScript">
+// this line is to assist the calendar text boxes
+var mypcc = '<?php echo $GLOBALS['phone_country_code'] ?>';
 
-	font-size:12pt;
-
-	font-family:helvetica;
-
+function PrintForm() {
+    newwin = window.open("<?php echo "http://".$_SERVER['SERVER_NAME'].$rootdir."/forms/".$this->form_folder."/print.php?id=".$_GET["id"]; ?>","mywin");
 }
-
-li{
-
-	font-size:11pt;
-
-	font-family:helvetica;
-
-	margin-left: 15px;
-
-}
-
-a {
-
-	font-size:11pt;
-
-	font-family:helvetica;
-
-}
-
-.title {
-
-	font-family: sans-serif;
-
-	font-size: 12pt;
-
-	font-weight: bold;
-
-	text-decoration: none;
-
-	color: #000000;
-
-}
-
-
-
-.form_text{
-
-	font-family: sans-serif;
-
-	font-size: 9pt;
-
-	text-decoration: none;
-
-	color: #000000;
-
-}
-
-
-
--->
-
-</style>
-
-{/literal}
+</script>
 
 </head>
 
-<body bgcolor="{$STYLE.BGCOLOR2}">
+<body class="body_top">
 
-<p><span class="title">Pregnacy CDSS Patient Examination Form</span></p>
+<?php echo date("F d, Y", time()); ?>
 
-<form name="pregnacy_cdss" method="post" action="{$FORM_ACTION}/interface/forms/pregnacy_cdss/save.php"
+<form method=post action="<?php echo $rootdir;?>/forms/<?php echo $this->form_folder; ?>/save.php?mode=update&id=<?php echo $_GET["id"];?>" name="pregnacy_cdss_form">
+<span class="title"><?php xl($this->form_name,'e'); ?></span><br>
 
- onsubmit="return top.restoreSession()">
- 
-<?php foreach $SymptCategory1 as $key=> $sympcat { echo $key.'. '.$sympcat->cat_name;}?>
+<!-- Save/Cancel links -->
+<input type="button" class="save" value="<?php xl('Save Changes','e'); ?>"> &nbsp; 
+<input type="button" class="dontsave" value="<?php xl('Don\'t Save Changes','e'); ?>"> &nbsp; 
+<input type="button" class="printform" value="<?php xl('Print','e'); ?>"> &nbsp; 
 
+<!-- container for the main body of the form -->
+<div id="form_container">
+
+<div id="general">
 <table>
-
-<tr>
-
-	<td>REFERRED BY &nbsp&nbsp;<input type="text" name="referred_by" size="39"value="{$hptje_primary->get_referred_by()}"></td>
-
-</tr>
-
-
-
-<tr>
-
-	<td>CHIEF COMPLAINTS</td>
-
-</tr>
-
-<tr>
-
-	<td><p><textarea name="complaints" cols="75" rows="3" wrap="virtual" >{$hptje_primary->get_complaints()}</textarea></p><br /></td>
-
-</tr>
-
-<tr>
-
-	<td><p>DATE OF ONSET&nbsp;&nbsp;{html_select_date start_year="1910"  time=$hptje_primary->get_date_of_onset() time=$hptje_primary->date_of_onset prefix="date_of_onset_"}</p><br></td>
-
-</tr>
-
-<tr>
-
-	<td>PRECIPITATING/AGGRAVATING EVENT: 	<select name="event"><option name="" value="">{html_options selected=$hptje_primary->get_event() options=$hptje_primary->event_array}</select></td>
-
-</tr>
-
-<tr>
-
-<td><p>Other Explain:&nbsp;<input type="text" name="event_description" value="{$hptje_primary->get_event_description()}" maxlength="255" size="39"></p><br /></td>
-
-</tr>
-
-<tr>
-
-<td><p><input type="checkbox" name="prior_symptoms" value="1" {if $hptje_primary->get_prior_symptoms() eq 1}checked{/if}">&nbsp;Denies presence of symptoms prior to accident &nbsp;&nbsp;&nbsp;<input type="checkbox" name="aggravated_symptoms" value="1" {if $hptje_primary->get_aggravated_symptoms() eq 1}checked{/if}>&nbsp;Affirms aggravation of symptoms after accident</p><br /></td>
-
-</tr>
-
+<?php 
+//var_dump($SymptCategory1);
+foreach ($SymptCategory as $key=>$SymptCat) 
+    {
+        echo "<tr><td>";
+        echo $SymptCat->id_category;
+        echo "</td><td>";
+        echo $SymptCat->cat_name;
+        echo "</td></tr>";
+    }
+?>
 </table>
+</div>
 
-<table>
+<div id="bottom">
+Use this space to express notes <br>
+<textarea name="notes" id="notes" cols="80" rows="4"><?php //echo stripslashes($record['notes']);?></textarea>
 
+</div>
+</div>
 
+</div> <!-- end form_container -->
 
-{foreach name=loops item=headings key=title from=$checks}
-
-<tr>
-
-	<td>
-
-		{if $smarty.foreach.loops.first ne 1}<br>{/if}
-
-		{$title}
-
-	</td>
-
-</tr>
-
-<tr>
-
-	<td>
-
-	  {foreach item=row key=row_title from=$headings}
-
-			<tr>
-
-				{if !is_numeric($row_title)}
-
-					<td>{$row_title}</td>
-
-					<td class="form_text">{html_checkboxes name="checks" options=$row selected=$hptje_primary->checks separator="&nbsp;</td><td class=\"form_text\">"}</td>
-
-				{else}
-
-					<td width="20"></td>
-
-					<td colspan="6"><table><tr><td class="form_text">
-
-					
-
-					{html_checkboxes name="checks" options=$row selected=$hptje_primary->checks separator="&nbsp;&nbsp;&nbsp;</td><td class=\"form_text\">"}
-
-					{if $title eq "Teeth"}
-
-						&nbsp;&nbsp;Sore#&nbsp;<input type="text" name="teeth_sore_number" size="1" value="{$hptje_primary->get_teeth_sore_number()}">
-
-						&nbsp;&nbsp;Mobile#&nbsp;<input type="text" name="teeth_mobile_number" size="1" value="{$hptje_primary->get_teeth_mobile_number()}">
-
-						&nbsp;&nbsp;Fractured#&nbsp;<input type="text" name="teeth_fractured_number" size="1" value="{$hptje_primary->get_teeth_fractured_number()}">
-
-						&nbsp;&nbsp;Avulsed#&nbsp;<input type="text" name="teeth_avulsed_number" size="1" value="{$hptje_primary->get_teeth_avulsed_number()}">
-
-					{elseif $title eq "Precipitating Factors" and $row_title eq 2}
-
-						&nbsp;<input type="text" name="precipitating_factors_other_text" size="15" value="{$hptje_primary->get_precipitating_factors_other_text()}">
-
-					{/if}
-
-					</td></tr></table></td>
-
-				{/if}
-
-				
-
-			</tr>
-
-	  {/foreach}
-
-	  
-
-	</td>
-
-</tr>
-
-{/foreach}
-
-</table>
-
-<table>
-
-<tr>
-
-	<td colspan="10">HISTORY OF PREVIOUS TREATMENT</td>
-
-</tr>
-
-<tr>
-
-	<td>&nbsp;&nbsp;&nbsp;A.</td><td colspan="10">Specialty<br>
-
-	(A)Anesthesiologist (C) Chiropractor (D) Dentist (E) ENT (F) Family Physician (H) Hospital ER<br>
-
-	(N) Neurologist (O)Orthopedist (P) Physical Therapist (R)Rheumatologist<br><br></td>
-
-</tr>
-
-<tr>
-
-	<td>&nbsp;&nbsp;&nbsp;B.</td><td colspan="10">Treatment Modalities<br>
-
-	(1)Chiropractic (2)Equilibration (3) Examination (4) Medication (5) MRI (6) Orthodontic (7) Orhtopedic<br>
-
-	(8) Pallative (soft diet, heat, etc.) (9) Physical Therapy (10)Prolotherapy (11)Reconstruction (12) Referal<br>
-
-	(13) Soft Collar (14) Cervical Immobilization (15) Splint Therapy (16) TMJ Surgery (17) X-rays<br><br></td>
-
-</tr>
-
-<tr>
-
-	<td>&nbsp;&nbsp;&nbsp;C.</td><td colspan="10">Effectiveness of Treatment: (N) None&nbsp;&nbsp;(F) Fair&nbsp;&nbsp;(G)Good&nbsp;&nbsp;(E)Excellent<br><br></td>
-
-</tr>
-
-<tr>
-
-	<td>Doctor</td><td>Specialty</td><td>TX Rendered</td><td>Effectiveness</td><td>Date</td>
-
-</tr>
-
-{section name="history" loop=8 start="0"}
-
-<tr>
-
-	<td><input type="text" name="history[{$smarty.section.history.index}][doctor]" size="25" value="{$hptje_primary->history[$smarty.section.history.index].doctor}"></td>
-
-	<td><input type="text" name="history[{$smarty.section.history.index}][specialty]" size="25" value="{$hptje_primary->history[$smarty.section.history.index].specialty}"></td>
-
-	<td><input type="text" name="history[{$smarty.section.history.index}][tx_rendered]" size="25" value="{$hptje_primary->history[$smarty.section.history.index].tx_rendered}"></td>
-
-	<td><input type="text" name="history[{$smarty.section.history.index}][effectiveness]" size="15" value="{$hptje_primary->history[$smarty.section.history.index].effectiveness}"></td>
-
-	<td><input type="text" name="history[{$smarty.section.history.index}][date]" size="10" value="{$hptje_primary->history[$smarty.section.history.index].date}"></td>
-
-</tr>
-
-{/section}
-
-</table>
-
-<table>
-
-<tr>
-
-	<td colspan="3"><br><br>HISTORY OF PREVIOUS ACCIDENTS OR INJURIES</td>
-
-</tr>
-
-<tr>
-
-	<td>Nature of Accident</td><td>Injuries</td><td>Date</td>
-
-</tr>
-
-{section name="previous_accidents" loop=8 start="0"}
-
-<tr>
-
-
-
-	<td><input type="text" name="previous_accidents[{$smarty.section.previous_accidents.index}][nature_of_accident]" size="35" value="{$hptje_primary->previous_accidents[$smarty.section.previous_accidents.index].nature_of_accident}"></td>
-
-	<td><input type="text" name="previous_accidents[{$smarty.section.previous_accidents.index}][injuries]" size="25" 	value="{$hptje_primary->previous_accidents[$smarty.section.previous_accidents.index].injuries}"></td>
-
-	<td><input type="text" name="previous_accidents[{$smarty.section.previous_accidents.index}][date]" size="10" 		value="{$hptje_primary->previous_accidents[$smarty.section.previous_accidents.index].date}"></td>
-
-</tr>
-
-{/section}
-
-</table>
-
-<table>
-
-<tr>
-
-	<td>COMMENTS</td>
-
-</tr>
-
-<tr>
-
-	<td><textarea name="comments" value="{$hptje_primary->get_comments()}" wrap="virtual" cols="75" rows="8">{$hptje_primary->get_comments()}</textarea></td>
-
-</tr>
-
-{if $VIEW != true}
-
-<tr>
-
-	<td><input type="submit" name="Submit" value="Save Form">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
-<a href="{$DONT_SAVE_LINK}" class="link" onclick="top.restoreSession()">[Don't Save]</a></td>
-
-</tr>
-
-{/if}
-
-</table>
-
-<input type="hidden" name="id" value="{$hptje_primary->get_id()}" />
-
-<input type="hidden" name="activity" value="{$hptje_primary->get_activity()}">
-
-<input type="hidden" name="pid" value="{$hptje_primary->get_pid()}">
-
-<input type="hidden" name="process" value="true">
+<input type="button" class="save" value="<?php xl('Save Changes','e'); ?>"> &nbsp; 
+<input type="button" class="dontsave" value="<?php xl('Don\'t Save Changes','e'); ?>"> &nbsp; 
+<input type="button" class="printform" value="<?php xl('Print','e'); ?>"> &nbsp; 
 
 </form>
 
 </body>
+
+<script language="javascript">
+/* required for popup calendar */
+//Calendar.setup({inputField:"dob", ifFormat:"%Y-%m-%d", button:"img_dob"});
+//Calendar.setup({inputField:"form_date", ifFormat:"%Y-%m-%d", button:"img_form_date"});
+//Calendar.setup({inputField:"sig_date", ifFormat:"%Y-%m-%d", button:"img_sig_date"});
+
+// jQuery stuff to make the page a little easier to use
+
+$(document).ready(function(){
+    $(".save").click(function() { top.restoreSession(); document.my_form.submit(); });
+    $(".dontsave").click(function() { location.href='<?php echo "$rootdir/patient_file/encounter/$this->returnurl";?>'; });
+    $(".printform").click(function() { PrintForm(); });
+});
+
+</script>
 
 </html>
