--- a/style.css
+++ b/style.css
@@ -30,12 +30,12 @@ h1 {
 }
 
 .formtext {
-    font-family: courier;
-    font-size: 90%;
+    font-family: arial;
+    font-size: 100%;
 }
 
 .link {
-    font-size: 80%;
+    font-size: 90%;
 }
 
 .link_submit {
@@ -47,7 +47,28 @@ h1 {
     font-weight: bold;
 }
 
-.bold { 
+.symptcategory {
+    padding: 10px;
+    border-bottom: 1px solid black;
+}
+
+.symptom {
+    padding: 5px;
+    margin: 5px;
+    background-color: rgba(143, 188, 143, 0.58);
+}
+
+.symptcattitletext {
+    font-size: 120%;
+    font-weight: bold;
+    background-color: orange;
+}
+
+.symptomtext {
+    font-weight: bold;
+}
+
+.bold {
     font-size: 110%;
     font-weight: bold;
 }
