1. fix: isfirst pregnacy, create date 2. clean-up

--- a/View/SymptByPatient2_Form.html
+++ b/View/SymptByPatient2_Form.html
@@ -30,6 +30,7 @@
 <input type="hidden" name="id" value="<?php echo $this->form_idexam; ?>" />
 <!--<input type="hidden" name="activity" value="{$data->get_activity()}">-->
 <input type="hidden" name="pid" value="<?php echo $this->form_pid; ?>">
+<input type="hidden" name="createdate" value="<?php echo $this->createdate; ?>">
 <input type="hidden" name="process" value="true">
 <input type="hidden" class="isfirstpregnacyhd" name="isfirstpregnacyhd" value="<?php echo $this->is_firstpregnacy; ?>">
 
